# zoho_sdk

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  README_GIT.md  SECURITY.md  auth_manager.py  examples_test.py  examples_test2.py  pyproject.toml  requirements.txt  setup.py  zoho_config.json  zoho_timesheet_cli.py
docs/: Makefile  changelog.md  conf.py  contributing.rst  index.rst  make.bat
docs/_build/gettext/: contributing.pot  index.pot
docs/_build/gettext/.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  index.doctree  license.doctree
docs/_build/gettext/.doctrees/api/: attendance.doctree  auth.doctree  client.doctree  employee.doctree  exceptions.doctree  leave.doctree  timesheet.doctree
docs/_build/gettext/.doctrees/getting-started/: authentication.doctree  installation.doctree  quickstart.doctree
docs/_build/gettext/.doctrees/guide/: attendance.doctree  employees.doctree  error-handling.doctree  leave.doctree  timesheet.doctree
docs/_build/gettext/api/: attendance.pot  auth.pot  client.pot  exceptions.pot  leave.pot
docs/_build/gettext/getting-started/: authentication.pot  installation.pot  quickstart.pot
docs/_build/gettext/guide/: attendance.pot  employees.pot  leave.pot  timesheet.pot
docs/_build/html/en/: .buildinfo
docs/_build/html/en/.doctrees/: changelog.doctree  contributing.doctree  environment.pickle  index.doctree  license.doctree
docs/_build/html/en/_modules/: index.html
docs/api/: attendance.rst  employee.rst  exceptions.rst  leave.rst  timesheet.rst
docs/getting-started/: installation.rst
docs/guide/: timesheet.rst
docs/locale/it/LC_MESSAGES/: changelog.po  index.mo  index.po  license.po
docs/locale/it/LC_MESSAGES/api/: attendance.mo  employee.po  timesheet.po
docs/locale/it/LC_MESSAGES/getting-started/: authentication.mo  authentication.po  installation.mo  installation.po
docs/locale/it/LC_MESSAGES/guide/: attendance.mo  attendance.po  employees.mo  (+6 more)
examples/: usage.py
src/zoho_people/: __init__.py  __main__.py  auth.py  cli.py  client.py  exceptions.py
src/zoho_people/api/: __init__.py  attendance.py  employee.py  leave.py  timesheet.py
tests/: test_auth.py  test_people_api.py  test_sdk.py
tests/api/: test_attendance.py  test_timesheet.py
zoho_vertical_sdk/: __init__.py  attendance.py  auth.py  bulk.py  client.py  compensatory.py  employee.py  exceptions.py  files_api.py  leave.py  metadata.py  modules.py  notifications.py  orgstructure.py  performance.py  query.py  records.py  shift.py  timesheet.py  variable.py
(+30 files in other folders)
