[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoho-people-sdk"
version = "0.1.0"
description = "Python SDK for the Zoho People API (attendance, timesheet, leave, employees)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "madyel83", email = "madyel83@github.com" }
]
keywords = ["zoho", "people", "hr", "attendance", "timesheet", "api", "sdk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Scheduling",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
    "termcolor>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1",
    "sphinx-copybutton>=0.5",
    "myst-parser>=3.0",
    "sphinx-intl>=2.1",
]
browser = ["playwright>=1.40"]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "responses>=0.23",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "types-requests",
]

[project.scripts]
zoho-people = "zoho_people.cli:main"

[project.urls]
Homepage    = "https://github.com/madyel83/zoho-people-sdk"
Repository  = "https://github.com/madyel83/zoho-people-sdk"
Issues      = "https://github.com/madyel83/zoho-people-sdk/issues"
Changelog   = "https://github.com/madyel83/zoho-people-sdk/blob/main/CHANGELOG.md"

# ── src layout ────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zoho_people = ["py.typed"]

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py310"
src            = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── Mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.10"
mypy_path              = "src"
strict                 = true
warn_return_any        = true
warn_unused_configs    = true
disallow_untyped_defs  = true

# ── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
